...
                                    AnalyticsLogForTesting(analyticsLog: $analyticsLogObserver.analyticsLog)
                                }
                                Button {
                                    playgroundController.didTapResetConfig()
                                    searchText = ""
                                } label: {
                                    Text("Reset")
                                        .font(.callout.smallCaps())
                                }.buttonStyle(.bordered)
                                Button {
                                    playgroundController.didTapEndpointConfiguration()
                                } label: {
                                    Text("Endpoints")
                                        .font(.callout.smallCaps())
                                }.buttonStyle(.bordered)
                                Button {
                                    showingQRSheet.toggle()
                                } label: {
                                    Text("QR")
                                        .font(.callout.smallCaps())
                                }.buttonStyle(.bordered)
                                    .sheet(isPresented: $showingQRSheet, content: {
                                        QRView(url: playgroundController.settings.base64URL)
                                    })
                            }
...
                }
                Button {
                    reloadPlaygroundController()
                } label: {
                    Image(systemName: "arrow.clockwise.circle")
                }
                .accessibility(identifier: "Reload")
                .frame(alignment: .topLeading)
            }
        }.padding(.horizontal)
    }

    var body: some View {
...
                    if let ps = playgroundController.paymentSheet,
                       playgroundController.lastPaymentResult == nil || playgroundController.lastPaymentResult?.shouldAllowPresentingPaymentSheet() ?? false {
                        HStack {
                            Button {
                                psIsPresented = true
                            } label: {
                                Text("Present PaymentSheet")
                            }
                            .paymentSheet(isPresented: $psIsPresented, paymentSheet: ps, onCompletion: playgroundController.onPSCompletion)
                            Spacer()
                            cartButton
                            Button {
                                playgroundController.didTapShippingAddressButton()
...
            .accessibility(hidden: false)
    }
}

struct StaleView: View {
    var body: some View {
        Text("Stale")
            .font(.subheadline.smallCaps().bold())
            .padding(.horizontal, 4.0)
            .padding(.bottom, 2.0)
            .background(Color.red)
            .foregroundColor(.white)
            .cornerRadius(8.0)
...
