...
        case paymentSheet
        case flowController
        case embedded
    }

    enum LayoutDirection: String, PickerEnum {
        static var enumName: String { "Layout Direction" }

        case system
        case leftToRight = "left_to_right"
        case rightToLeft = "right_to_left"

        var displayName: String {
            switch self {
            case .system:
                return "System"
            case .leftToRight:
                return "LTR"
            case .rightToLeft:
                return "RTL"
            }
        }
    }

    enum Mode: String, PickerEnum {
        static var enumName: String { "Mode" }
...
