...
            appearance: appearance
        )
    }

    override func createCloseButton() -> UIButton {
        return Self.createCloseButton(
            accessibilityIdentifier: "UIButton.Close",
            appearance: appearance
        )
    }

    static func createCloseButton(
        accessibilityIdentifier: String,
...
